# ear-vision-ml

./: .gitignore  AGENTS.md  AI_CONTEXT.md  ARCHITECTURE_REFACTORING.md  CLAUDE.md  COMPLETE_SUMMARY.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PRD.md  PRODUCTION_READINESS_PLAN.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_READY.md  README.md  REFACTORING_SUMMARY.md  SOTA_ENHANCEMENTS.md  TASKS.md  TEST_COVERAGE_SUMMARY.md  TODO.md  TRAINING_GUIDE.md  mypy.ini  pyproject.toml  requirements.in  requirements.txt  ruff.toml  test_results.txt  tuning.db
configs/: config.yaml
configs/data/: augmentations.yaml  gcs_parquet.yaml  labelbox_json.yaml  local.yaml  otoscopic.yaml  sampling.yaml
configs/ensemble/: cloud_soft_voting.yaml  device_swift_v1.yaml
configs/evaluation/: ab_test.yaml  default.yaml  video.yaml
configs/experiment/: otoscopic_baseline.yaml
configs/explainability/: default.yaml
configs/export/: coreml.yaml  tflite.yaml
configs/infrastructure/: local.yaml  vertex.yaml
configs/model/: cls_efficientnetb0.yaml  cls_mobilenetv3.yaml  cls_resnet50v2.yaml  seg_unet.yaml  (+3 more)
docs/: E2E_TEST_REPORT.md  README.md  ab_testing.md  datasets.md  deployment_ios.md  device_contract.md  distillation.md  ensembles.md  experiments.md  explainability.md  export.md  hyperparameter_tuning.md  models.md  preprocessing.md  quickstart.md  release_checklist.md  repo_rules.md  testing.md  troubleshooting.md
notebooks/: repo_overview.ipynb
scripts/: analyze_otoscopic_images.py  build_dataset.sh  build_otoscopic_dataset.py  export_model.sh  generate_fixtures.py  local_train.sh  run_e2e_test.sh  run_otoscopic_baselines.sh  run_quick_e2e.sh  run_video_inference.sh  test_freezing.py  tune_locally.py  vertex_submit.sh
(+221 files in other folders)
