[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ear-vision-ml"
version = "0.1.0"
description = "Otoscopy vision ML: ROI cropper + downstream classification/segmentation for local and Vertex AI."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Tympa (internal)", email = "ml@tympa.invalid"}]
dependencies = [
  "tensorflow>=2.17,<2.18",
  "hydra-core>=1.3,<2.0",
  "omegaconf>=2.3,<3.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "pyarrow>=16,<20",
  "jsonschema>=4.22,<5.0",
  "matplotlib>=3.8,<4.0",
  "pillow>=10.4,<12.0",
  "opencv-python-headless>=4.10,<5.0",
  "scikit-learn>=1.4,<2.0",
  "google-cloud-aiplatform>=1.59,<2.0",
  "google-cloud-storage>=2.16,<3.0",
  "google-cloud-bigquery>=3.25,<4.0",
  "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-xdist>=3.6,<4.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.10,<2.0",
  "types-PyYAML>=6.0.12.20240808",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
